dataset1235/2025-2/610742602/users/603578795/executions/2563853024_1559799913.log
== SUBMISSION (2025-09-02 20:11:25)
-- CODE: 
numero = float(input("insira numero inteiro:"))
quadrado = numero ** 2
print(quadrado)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2
---- correct output:
4
---- user output:
insira numero inteiro:4.0
-- TEST CASE 2:
---- input:
0
---- correct output:
0
---- user output:
insira numero inteiro:0.0
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
---- user output:
insira numero inteiro:1000000.0
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
---- user output:
insira numero inteiro:100.0
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
---- user output:
insira numero inteiro:225.0
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
---- user output:
insira numero inteiro:14400.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:11:41)
-- CODE: 
numero = int(input("insira numero inteiro:"))
quadrado = numero ** 2
print(quadrado)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2
---- correct output:
4
---- user output:
insira numero inteiro:4
-- TEST CASE 2:
---- input:
0
---- correct output:
0
---- user output:
insira numero inteiro:0
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
---- user output:
insira numero inteiro:1000000
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
---- user output:
insira numero inteiro:100
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
---- user output:
insira numero inteiro:225
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
---- user output:
insira numero inteiro:14400
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:11:20)
-- CODE: 
numero = float(input("insira numero inteiro:"))
quadrado = numero ** 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
---- user output:
insira numero inteiro:4.0
-- TEST CASE 2:
---- input:
0
---- correct output:
0
---- user output:
insira numero inteiro:0.0
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
---- user output:
insira numero inteiro:1000000.0
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
---- user output:
insira numero inteiro:100.0
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
---- user output:
insira numero inteiro:225.0
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
---- user output:
insira numero inteiro:14400.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:11:11)
-- CODE: 
numero = Float(input("insira numero inteiro:"))
quadrado = numero ** 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = Float(input("insira numero inteiro:"))
             ^^^^^
NameError: name 'Float' is not defined. Did you mean: 'float'?
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = Float(input("insira numero inteiro:"))
             ^^^^^
NameError: name 'Float' is not defined. Did you mean: 'float'?
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = Float(input("insira numero inteiro:"))
             ^^^^^
NameError: name 'Float' is not defined. Did you mean: 'float'?
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = Float(input("insira numero inteiro:"))
             ^^^^^
NameError: name 'Float' is not defined. Did you mean: 'float'?
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = Float(input("insira numero inteiro:"))
             ^^^^^
NameError: name 'Float' is not defined. Did you mean: 'float'?
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = Float(input("insira numero inteiro:"))
             ^^^^^
NameError: name 'Float' is not defined. Did you mean: 'float'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:11:37)
-- CODE: 
numero = int(input("insira numero inteiro:"))
quadrado = numero ** 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
---- user output:
insira numero inteiro:4
-- TEST CASE 2:
---- input:
0
---- correct output:
0
---- user output:
insira numero inteiro:0
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
---- user output:
insira numero inteiro:1000000
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
---- user output:
insira numero inteiro:100
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
---- user output:
insira numero inteiro:225
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
---- user output:
insira numero inteiro:14400
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
